--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "paths": {
       "~/components/*": ["components/*"],
       "~/lib/*": ["lib/*"],
-      "~/styles/*": ["styles/*"],
-      "@/lib/*": ["lib/*"]
+      "~/styles/*": ["styles/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
