--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-modal": "^3.15.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.18",
+    "@types/react-modal": "^3.13.1",
     "sass": "^1.54.8",
     "typescript": "^4.8.2"
   }
